PaymentHandler: Should use NotAllowedError instead of InvalidAccessError

When openWindow() is not triggered by user activation, currently throws
InvalidAccessError. But it's already deprecated in spec level. Instead
we should throw NotAllowedError.

Related spec change:
  https://github.com/w3c/payment-handler/pull/291

Bug: 833532
Change-Id: Icc21301abcafa0ecd00d6232d73a273ca6e4dd9b
Reviewed-on: https://chromium-review.googlesource.com/1013659
Commit-Queue: Jinho Bang <jinho.bang@samsung.com>
Reviewed-by: Ganggui Tang <gogerald@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553685}
Former-commit-id: 4aa2044c320e5aa09c28d8fafc69020800fc5914